--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,12 @@ dependencies:
   meta: ^1.0.0
   path: ^1.3.4
   pub_semver: ^2.0.0
+  pubspec_lock_parse: ^2.2.0
   yaml: ^3.1.0
 
 dev_dependencies:
   lints: ^2.0.0
-  test: ^1.6.0
+  test: ^1.24.2
   test_descriptor: ^2.0.0
   test_process: ^2.0.0
 
