--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,14 @@ dependencies:
   logger: ^1.3.0
   meta: ^1.0.0
   path: ^1.3.4
+  process_run: ^0.13.0
   pub_semver: ^2.0.0
   pubspec_lock_parse: ^2.2.0
   yaml: ^3.1.0
 
 dev_dependencies:
   lints: ^2.0.0
+  mocktail: ^0.3.0
   test: ^1.24.2
   test_descriptor: ^2.0.0
   test_process: ^2.0.0
