--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   args: ^2.0.0
+  collection: ^1.17.2
   get_it: ^7.4.1
   git: ^2.0.0
   io: ^1.0.0
@@ -16,6 +17,7 @@ dependencies:
   process_run: ^0.13.0
   pub_semver: ^2.0.0
   pubspec_lock_parse: ^2.2.0
+  pubspec_parse: ^1.2.3
   # yaml: ^3.1.0
 
 dev_dependencies:
