add codecov to PR validation

--- a/.github/workflows/pr_validation.yaml
+++ b/.github/workflows/pr_validation.yaml
@@ -1,9 +1,12 @@
 name: Validate PR
 
 env:
-  flutter_version: 3.3.9
+  dart_version: 2.19.2
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches:
       - main
@@ -15,16 +18,13 @@ jobs:
     timeout-minutes: 15
 
     steps:
-      - uses: actions/checkout@v2
-        with:
-          persist-credentials: true
+      - uses: actions/checkout@v3
 
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2
+      - uses: dart-lang/setup-dart@v1
         with:
-          flutter-version: ${{ env.flutter_version }}
+          sdk: ${{ env.dart_version }}
 
-      - name: Pub get
+      - name: Pub Get
         run: dart pub get
 
       - name: Publish dry run
