--- a/.github/workflows/upload_coverage.yaml
+++ b/.github/workflows/upload_coverage.yaml
@@ -1,4 +1,4 @@
-name: Test
+name: Upload Coverage
 
 env:
   dart_version: 2.19.2
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  test:
+  coverage:
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
