--- a/.github/workflows/upload_coverage.yaml
+++ b/.github/workflows/upload_coverage.yaml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+      - staging
 
 jobs:
   coverage:
@@ -25,7 +26,13 @@ jobs:
       - name: Run Tests
         run: |
           dart test --coverage=coverage
-          dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+          dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --report-on=lib
+      
+      - name: Verify Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v2
+        with:
+          path: /coverage/lcov.info
+          min_coverage: 20
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
