--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
 dev_dependencies:
   lints: ^2.0.0
   mocktail: ^0.3.0
+  pub_api_client: ^2.4.0
   test: ^1.24.2
   test_descriptor: ^2.0.0
   test_process: ^2.0.0
