--- a/.github/workflows/pr_validation.yaml
+++ b/.github/workflows/pr_validation.yaml
@@ -7,7 +7,7 @@ on:
   push:
     branches:
       - main
-      - staging
+      - develop
   pull_request:
     branches:
       - main
@@ -45,7 +45,7 @@ jobs:
         uses: VeryGoodOpenSource/very_good_coverage@v2
         with:
           path: coverage/lcov.info
-          min_coverage: 20
+          min_coverage: 75
 
       - name: Publish dry run
         run: dart pub publish --dry-run
