--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,4 +1,4 @@
-name: Upload Coverage
+name: Publish
 
 env:
   dart_version: 2.19.2
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  coverage:
+  publish:
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
@@ -25,7 +25,10 @@ jobs:
       - name: Run Tests
         run: |
           dart test --coverage=coverage
-          dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.dart_tool/package_config.json --report-on=lib
+          dart run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --report-on=lib
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
+
+      - name: Publish to pub.dev
+        uses: dart pub publish
