--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   publish:
+    permissions:
+      id-token: write # required for authentication using OIDC to publish to pub.dev
     runs-on: ubuntu-latest
     timeout-minutes: 15
 
@@ -31,4 +33,4 @@ jobs:
         uses: codecov/codecov-action@v3
 
       - name: Publish to pub.dev
-        uses: dart pub publish
+        run: dart pub publish
