--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   pub_semver: ^2.0.0
   pubspec_lock_parse: ^2.2.0
   pubspec_parse: ^1.2.3
+  yaml: ^3.1.2
   # pubspec_parse:
   #   git: https://github.com/dart-lang/pubspec_parse
 
