--- a/changelog_bubbler.yaml
+++ b/changelog_bubbler.yaml
@@ -1,7 +1,8 @@
 # Any of these templates can be overriden.
 # By default, they will use the bundled html files
 template-paths:
-  root_template: "./root_template.html"
-  dependency_added_or_removed_template: "./dependency_added_or_removed_template.html"
-  dependency_changed_template: "./dependency_changed_template.html"
-  no_changed_dependencies_template: "./no_changed_dependencies_template.html"
+  root_template: "template/root_template.html"
+  dependency_added_or_removed_template: "template/dependency_added_or_removed_template.html"
+  dependency_changed_template: "template/dependency_changed_template.html"
+  dependency_group_template: "template/release_note_templates/dependency_group_template.html"
+  no_changed_dependencies_template: "template/no_changed_dependencies_template.html"
